# GW2-DamageMeter

./: .gitignore  .gitmodules  CMakeLists.txt  GW2-DamageMeter.sln  GW2-DamageMeter.vcxproj  GW2-DamageMeter.vcxproj.filters  GenerateTargets.ps1  LICENSE  README.md  conanfile.txt
src/: Targets.h  dllmain.cpp
src/Core/: Addon.cpp  Addon.h  Combat.cpp  Combat.h  Localization.cpp  Localization.h  imgui_positioning.h
src/Core/Combat/: CbtAgent.h  CbtEncounter.h  CbtEvent.h  CbtEventHandler.h  Combat.cpp  Combat.h
src/Core/TextCache/: TextCache.cpp  TextCache.h
src/UI/: UiRoot.cpp  UiRoot.h
